css/index-combined-navigation-autoplay-pause-btn-contstant.css
/* ... */
.left-arrow-btn {
  left: 9px;
  background-image: url(../assets/64x64_0021_left-arrow-white.png);
  background-position: calc(50% - 2px) center;
}

.right-arrow-btn {
  right: 9px;
  background-image: url("../assets/64x64_0022_right-arrow-white.png");
  background-position: calc(50% + 2px) center;
}

.active-opacity {
  opacity: 0.1 !important;
}

/* Custom arrows for vertical swiping for Swiper Vertical */
.navigation-buttons {
  position: absolute;
  bottom: 12px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 100;
  display: block;
}

/* Down Arrow for Swiper Vertical navigation */
.down-arrow-btn {
  width: 46px;
  height: 46px;
  transition: opacity 0.1s;
  background-size: 23px 23px;
  background-image: url("../assets/64x64_0022_down-arrow-white.png");
  background-position: center 58%;
  position: relative;
  top: 2px;
}

/* Increases the clickable area of all these buttons.  A large touch area is important, otherwise it results in often toggling visibility of buttons when wanting to click / touch them.  */
.left-arrow-btn::before,
.right-arrow-btn::before,
.down-arrow-btn::before,
.autoplay-toggle::after,
.close-btn::before,
.options-btn::before,
.pencil-click-area {
  position: absolute;
  background: transparent;
  pointer-events: auto;
  z-index: 300;
  cursor: pointer;
}

/* This has a little bit bigger click / touch area than close-btn and options-btn on title row. */
.left-arrow-btn::before,
.right-arrow-btn::before,
.down-arrow-btn::before,
.autoplay-toggle::after {
  content: "";
  top: -25px;
  bottom: -25px;
  left: -25px;
  right: -25px;
}

/* Increases clickable / touch area of close button and options button. */
.close-btn::before,
.options-btn::before {
  content: "";
  top: -20px;
  bottom: -20px;
  left: -20px;
  right: -20px;
}

/* Increases clickable / touch area of pencil and Add a Caption. */
.pencil-click-area {
  top: -20px;
  bottom: -12px;
  left: -20px;
  right: -12px;
}

/* Edit Caption Pop-up when selecting from options menu */
.edit-caption-popup {
  position: fixed;
  top: 0px;
  left: 0;
  right: 0;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: black;
  padding: 10px;
  z-index: 2000;
}

.edit-caption-popup textarea {
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 14px;
  width: 50%;
  padding: 8px;
  color: white;
  background-color: #3f3f3f;
  border: 1px solid #444;
  border-radius: 2px;
  resize: none;
  height: 36px;
  margin-right: 10px;
  text-align: left;
}

.edit-caption-popup textarea:focus {
  border-color: #636363;
  outline: none;
}

.edit-caption-popup textarea::placeholder {
  color: white;
}

.edit-caption-popup button {
  padding: 9px 18px;
  color: black;
  font-size: 14px;
  background: linear-gradient(to bottom, #fdbb00 0%, #c98c00 100%);
  border: none;
  border-radius: 2px;
  cursor: pointer;
}

.edit-caption-popup.hidden {
  display: none;
}

.hidden {
  display: none;
}

.image-container-for-portraits-desktop {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100svh;
  overflow: hidden;
  position: relative;
}

/* To animate first slide sliding in from the right side when screen sizes are 601px or larger width */
@keyframes slide-in {
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

/* To animate first slide sliding in from the bottom when screen sizes are up to 600px width */
@keyframes vertical-slide-in {
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/* Media Queries for Phones */
@media (max-width: 600px) {
  /* Animate first slide to slide in from the bottom for screens up to 600px width. */

  /* Container for text related to a link media item, specifically, link-title, link-description, url clickable text and open and save link buttons  */

  .link-main-page-container {
    /* Start with elements fully transparent and off-screen at the bottom */
    opacity: 0;
    transform: translateY(100%);
    animation: vertical-slide-in 0.2s forwards;
    animation-delay: 0.1s;
    display: flex;
    flex-direction: column;
    align-self: flex-start;
  }

  .link-container {
    margin-top: 50svh; /* Starts directly below the image */
    height: auto;
    padding-top: 1svh;
  }

  .edit-caption-popup {
    flex-direction: column;
    align-items: flex-start;
    padding: 0 20px;
  }

  .edit-caption-popup textarea {
    width: 100%;
    height: 72px;
    margin-right: 0;
    margin-top: 10px;
  }

  .edit-caption-popup button {
    width: auto;
    align-self: flex-end;
    margin-top: 12px;
    margin-bottom: 12px;
  }

  /* Hides left and right arrow buttons on phones. */
  .left-arrow-btn,
  .right-arrow-btn {
    display: none;
  }
}
/* ... */

